# eventmgr

./: Cargo.toml  grim  re-run.sh  readme.md
src/: client.rs  macros.rs  main.rs  structs.rs  util.rs
