[package]
name = "eventmgr"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
tokio = {version = "1.28", features = ["full"] }
ciborium = "0.2"
phf = {version = "0.11", features = ["default", "macros"] }

mountinfo = "0.2"


[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"


