[package]
name = "eventmgr"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
tokio = {version = "1.28", features = ["full"] }
ciborium = "0.2"
phf = {version = "0.11", features = ["default", "macros"] }
once_cell = "1.17"

mountinfo = "0.2"
swayipc-async = "2.0"
async-walkdir = "0.2"
procfs = "0.15"
nix = "0.26"
notify-rust = "4.8"
bulbb = "0"
fastrand = "1.9"
async_zip = { version = "0", features = ["full"] }
# pulsectl-rs = "0.3"
alsa = "0.7"


[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
target-cpu = "native"


