[package]
name = "eventmgr"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
tokio = {version = "1.28", features = ["full"] }
ciborium = "0.2"
phf = {version = "0.11", features = ["default", "macros"] }
once_cell = "1.17"

#mountinfo = "0.2"
mountinfo = { git = "https://github.com/Jeffrey-P-McAteer/mountinfo.git" }
# ^^ Fork contains patch to only compile regexes once, MUCH better performance!

swayipc-async = "2.0"
async-walkdir = "0.2"
procfs = "0.15"
nix = "0.26"
notify-rust = "4.8"
bulbb = "0"
fastrand = "1.9"
async_zip = { version = "0", features = ["full"] }
# pulsectl-rs = "0.3"
# alsa = "0.7"
libpulse-binding = "2"
libpulse-simple-binding = "2"
glob = "0.3"

# hickory-client =  {version = "0.24", features = [ ] }
rsdns = { version = "0.17", features = ["net-std"] }

measure_time = "0.8"

num_cpus = "1"

lazy_static = "1.5"
cpu-time = "*"

serde_json = "*"

rsblkid = "0.4"



[profile.release]
#strip = true
strip = false
#opt-level = 3
opt-level = 1
lto = true
codegen-units = 1
panic = "abort"
target-cpu = "native"
debug = true


[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]

